--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section id="home">
         <div class="wrapper">
             <h1>Home</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, molestiae a culpa dolorum perferendis amet exercitationem illo sequi, eos non pariatur sint harum dignissimos earum optio assumenda voluptatem est officiis?</h3>
+            <h2>모험가 기질의 디자이너</h2>
+            <h3>자신만의 루틴을 바꾸는 사소한 부분도 모험이라고 생각합니다. 정글 깊은 곳 보물을 찾을 때까지 모험을 멈추지 않을 겁니다.</h3>
         </div>
     </section>
     <section id="about">
@@ -35,8 +35,8 @@
     <section id="skills">
         <div class="wrapper">
             <h1>Skills</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, molestiae a culpa dolorum perferendis amet exercitationem illo sequi, eos non pariatur sint harum dignissimos earum optio assumenda voluptatem est officiis?</h3>
+            <h2>자격증 및 사용가능한 프로그램</h2>
+            <h3>일러스트 2급 , 포토샵 1급 , </h3>
         </div>
     </section>
     <section id="works">
@@ -49,8 +49,9 @@
     <section id="contact">
         <div class="wrapper">
             <h1>Contact</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, molestiae a culpa dolorum perferendis amet exercitationem illo sequi, eos non pariatur sint harum dignissimos earum optio assumenda voluptatem est officiis?</h3>
+            <h2>인스타그램 / 네이버블로그</h2>
+            <h4>SNS는 인스타그램과 네이버블로그를 사용하고있습니다. 언제든 연락주세요</h4>
+            <h4>인스타그램 링크 <br> 네이버블로그 링크</h4>
         </div>
     </section>
     <script>
