--- a/index.html
+++ b/index.html
@@ -22,28 +22,34 @@
         <div class="wrapper">
             <h1>Home</h1>
             <h2>모험가 기질의 디자이너</h2>
-            <h3>자신만의 루틴을 바꾸는 사소한 부분도 모험이라고 생각합니다. 정글 깊은 곳 보물을 찾을 때까지 모험을 멈추지 않을 겁니다.</h3>
+            <h3>자신만의 루틴을 바꾸는 사소한 부분도 모험이라고 생각합니다. <br>정글 깊은 곳 보물을 찾을 때까지 모험을 멈추지 않을 겁니다.</h3>
         </div>
     </section>
     <section id="about">
         <div class="wrapper">
             <h1>About</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, molestiae a culpa dolorum perferendis amet exercitationem illo sequi, eos non pariatur sint harum dignissimos earum optio assumenda voluptatem est officiis?</h3>
+            <h3>나이 : 23세 <br> MBTI : INFJ <br> 좋아하는 것 : 영화시청</h3>
         </div>
     </section>
     <section id="skills">
         <div class="wrapper">
             <h1>Skills</h1>
             <h2>자격증 및 사용가능한 프로그램</h2>
-            <h3>일러스트 2급 , 포토샵 1급 , </h3>
+            <h3>포토샵, 일러스트, 인디자인 </h3>
         </div>
     </section>
     <section id="works">
         <div class="wrapper">
             <h1>Works</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, molestiae a culpa dolorum perferendis amet exercitationem illo sequi, eos non pariatur sint harum dignissimos earum optio assumenda voluptatem est officiis?</h3>
+            <h2>숨겨진 보물을 찾아라</h2>
+            <h3>패키지, 웹사이트, 포스터까지 다양하게 작업하고 있습니다. <br>
+            이외에도 캐릭터, 편집물 작업도 가능합니다.</h3>
+            <div class="container">
+                <img src="./imgs/img1.jpg" alt="">
+                <img src="./imgs/img2.jpg" alt="">
+                <img src="./imgs/img3.jpg" alt="">
+                <img src="./imgs/img4.jpg" alt="">
+        </div>
         </div>
     </section>
     <section id="contact">
