--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="btns">
         <div class="container">
+            <div class="container_bgcolor"></div>
             <div class="btns_menu">
                 <button class="btn home">Home</button>
                 <button class="btn about">About</button>
@@ -21,79 +23,118 @@
     <section id="home">
         <div class="wrapper">
             <h1>Home</h1>
-            <h2>모험가 기질의 디자이너</h2>
-            <h3>자신만의 루틴을 바꾸는 사소한 부분도 모험이라고 생각합니다. <br>정글 깊은 곳 보물을 찾을 때까지 모험을 멈추지 않을 겁니다.</h3>
+            <h2>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes</h2>
+            <h3>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes</h3>
         </div>
     </section>
     <section id="about">
         <div class="wrapper">
             <h1>About</h1>
-            <h3>나이 : 23세 <br> MBTI : INFJ <br> 좋아하는 것 : 영화시청</h3>
+            <h3>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes</h3>
         </div>
     </section>
     <section id="skills">
         <div class="wrapper">
             <h1>Skills</h1>
-            <h2>자격증 및 사용가능한 프로그램</h2>
-            <h3>포토샵, 일러스트, 인디자인 </h3>
+            <h2>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes</h2>
+            <h3>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes </h3>
         </div>
     </section>
     <section id="works">
         <div class="wrapper">
             <h1>Works</h1>
-            <h2>숨겨진 보물을 찾아라</h2>
-            <h3>패키지, 웹사이트, 포스터까지 다양하게 작업하고 있습니다. <br>
-            이외에도 캐릭터, 편집물 작업도 가능합니다.</h3>
-            <div class="container">
-                <img src="./imgs/img1.jpg" alt="">
-                <img src="./imgs/img2.jpg" alt="">
-                <img src="./imgs/img3.jpg" alt="">
-                <img src="./imgs/img4.jpg" alt="">
-        </div>
+            <h2>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes</h2>
+            <h3>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes</h3>
         </div>
     </section>
     <section id="contact">
         <div class="wrapper">
             <h1>Contact</h1>
-            <h2>인스타그램 / 네이버블로그</h2>
-            <h4>SNS는 인스타그램과 네이버블로그를 사용하고있습니다. 언제든 연락주세요</h4>
-            <h4>인스타그램 링크 <br> 네이버블로그 링크</h4>
+            <h2>Remedy is on the way
+                Unleash all the fear
+                Fearsome in your heart
+                Sunsets on your eyes</h2>
         </div>
     </section>
+    <button class="arrow-up">
+        <span class="material-symbols-outlined">
+            bolt
+            </span>
+    </button>
     <script>
-        const btnHome = document.querySelector('.home');
+                const btnHome = document.querySelector('.home');
         const sectionHome = document.querySelector('#home');
         btnHome.addEventListener('click', function() {
             sectionHome.scrollIntoView({behavior:"smooth" , block:"center"});
         });
-        </script>
-    <script>
+
         const btnAbout = document.querySelector('.about');
         const sectionAbout = document.querySelector('#about');
         btnAbout.addEventListener('click', function() {
             sectionAbout.scrollIntoView({behavior:"smooth" , block:"center"});
         });
-        </script>
-    <script>
+
         const btnSkills = document.querySelector('.skills');
         const sectionSkills = document.querySelector('#skills');
         btnSkills.addEventListener('click', function() {
             sectionSkills.scrollIntoView({behavior:"smooth" , block:"center"});
         });
-        </script>
-    <script>
+
         const btnWorks = document.querySelector('.works');
         const sectionWorks = document.querySelector('#works');
         btnWorks.addEventListener('click', function() {
             sectionWorks.scrollIntoView({behavior:"smooth" , block:"center"});
         });
-        </script>
-    <script>
+
         const btnContact = document.querySelector('.contact');
         const sectionContact = document.querySelector('#contact');
         btnContact.addEventListener('click', function() {
             sectionContact.scrollIntoView({behavior:"smooth" , block:"center"});
         });
-        </script>
+
+            const arrowUp = document.querySelector('.arrow-up');
+            document.addEventListener('scroll', function() {console.log(window.scrollY);
+                if (window.scrollY > 300) {
+                    arrowUp.classList.add('show');}
+                   else {
+                arrowUp.classList.remove('show');
+            }
+            })
+            arrowUp.addEventListener('click', function() {
+                sectionHome.scrollIntoView({behavior:"smooth",
+                block:"center"});
+            });
+
+            const containerBgcolor = document.querySelector('.container_bgcolor');
+            window.addEventListener('scroll', function() {console.log(window.scrollY);
+                if (window.scrollY > 300) {
+                    containerBgcolor.style.opacity = '1';}
+                   else {
+                containerBgcolor.style.opacity = '0';
+            }
+            })
+    </script>
+
 </body>
 </html>
